# trexx-clips

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  package-lock.json  package.json
apps/api/scripts/: init-escrow.mjs  x402-probe.mjs
apps/api/src/: db.js  index.js  soroban.js
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: App.jsx  main.jsx  stellarOps.js  styles.css
contracts/: README.md
contracts/campaign-escrow/: Cargo.toml
contracts/campaign-escrow/src/: lib.rs
