[package]
name = "campaign-escrow"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true

[dependencies]
soroban-sdk = "22.0.11"

[dev-dependencies]
soroban-sdk = { version = "22.0.11", features = ["testutils"] }

[package.metadata.stellar]
cargo-feat = ["soroban-sdk/testutils"]
